src/test/resources/fixtures/parser/solidity_official_tests/shouldSucceed/type_conversion_to_dynamic_array.sol
contract test {
  function fun() {
    var x = uint64[](3);
  }
}