src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/var_array.sol
contract Foo {
  function f() { var[] a; }